[project]
name = "scisa_benchmarks_api"
version = "0.1.0"
description = "Un api que maneja las diferentes benchmarks de los repositorios de SCISA"
authors = [{ name = "Carlos Alberto Torres Cano", email = "carlos.torres@scisa.com.mx" }, {name="Abigail Morales Aquino", email="abigail.morales@scisa.com.mx"}]

[urls]
api_url = "https://rework-rate.scisa.com.mx"
