[project]
name = "scisa_benchmarks_api"
version = "0.2.0"
description = "Un api que maneja las diferentes benchmarks de los repositorios de SCISA"
authors = [{ name = "Carlos Alberto Torres Cano", email = "carlos.torres@scisa.com.mx" }, {name="Abigail Morales Aquino", email="abigail.morales@scisa.com.mx"}]

[urls]
app_url = "https://rework-rate.scisa.com.mx"
api_url = "https://api.rework-rate.scisa.com.mx/graphql"
